<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.view.SettingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_view_header"
        android:paddingVertical="@dimen/spacing_tiny"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back_chat"
            android:layout_width="@dimen/icon_size_large"
            android:layout_height="@dimen/icon_size_large"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:src="@drawable/ic_arrow_left_thick"
            app:layout_constraintBottom_toBottomOf="@+id/txt_app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_app_name"
            app:tint="@color/color_header_app_info" />

        <TextView
            android:id="@+id/txt_app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_tiny"
            android:layout_marginStart="@dimen/spacing_tiny"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/title_header_setting"
            android:textColor="@color/color_header_title"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_back_chat"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/spacing_tiny"
        app:layout_constraintBottom_toTopOf="@+id/ll_action"
        app:layout_constraintTop_toBottomOf="@+id/cl_header">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_pinecone_key"
            style="@style/SettingEditText"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:hint="@string/label_setting_pinecone_key">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_pinecone_env"
            style="@style/SettingEditText"
            android:layout_marginBottom="@dimen/spacing_tiny"
            android:hint="@string/label_setting_pinecone_env">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_firebase_key"
            style="@style/SettingEditText"
            android:hint="@string/label_setting_firebase_key"
            android:layout_marginBottom="@dimen/spacing_small">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            style="@style/ThinHorizontalDividerStyle"
            android:layout_marginBottom="@dimen/spacing_small" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_temperature"
            style="@style/SettingEditText"
            android:layout_height="match_parent"
            android:hint="@string/label_setting_temperature">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View style="@style/ThinHorizontalDividerStyle" />

        <TextView
            android:id="@+id/btn_setting_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_setting_button_save"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

