<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/radius_big"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/spacing_small"
            android:paddingTop="@dimen/spacing_normal"
            android:paddingBottom="@dimen/spacing_tiny">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_chat_widget_sms"
                    android:textColor="@color/color_accent"
                    android:textSize="@dimen/font_big"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/btn_ok"
                    android:layout_width="@dimen/size_button_normal"
                    android:layout_height="@dimen/size_button_normal"
                    android:padding="@dimen/spacing_tiny"
                    android:src="@drawable/ic_send"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_title"
                    app:tint="@color/color_accent" />

                <ImageView
                    android:id="@+id/btn_cancel"
                    android:layout_width="@dimen/size_button_normal"
                    android:layout_height="@dimen/size_button_normal"
                    android:padding="@dimen/spacing_tiny"
                    android:src="@drawable/ic_cancel_schedule_send"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_title"
                    app:layout_constraintEnd_toStartOf="@+id/btn_ok"
                    app:layout_constraintTop_toTopOf="@+id/txt_title"
                    app:tint="@color/color_accent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                style="@style/HorizontalDividerStyle"
                android:layout_marginVertical="@dimen/spacing_tiny" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_phone_to_send"
                style="@style/CommonEditText"
                android:layout_marginBottom="@dimen/spacing_tiny"
                android:hint="@string/hint_text_sms_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_normal"
                    android:singleLine="true"
                    android:height="@dimen/height_edittext_normal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_message"
                style="@style/CommonEditText"
                android:layout_marginBottom="@dimen/spacing_tiny"
                android:hint="@string/hint_text_sms_message">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/font_normal"
                    android:minHeight="@dimen/height_edittext_normal"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>